Fix nav alignment and misc cleanup

--- a/emily.css
+++ b/emily.css
@@ -80,6 +80,12 @@ ul li:last-child {
   width: 95%;
 }
 
+.nav h3 {
+  font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .nav h3 a {
   text-decoration: none;
 }
@@ -88,12 +94,14 @@ ul li:last-child {
   color: #D1D9AE;
 }
 
-.nav h3 {
-  font-size: 24px;
+.nav ul {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .nav li {
   font-size: 18px;
+  margin-left: 18px;
 }
 
 .nav-list {
